--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersParticipants.yml
@@ -1,13 +1,11 @@
-name: How many suppliers will be evaluated
+name: How many suppliers you’ll shortlist
 id: numberOfSuppliers
-question: How many suppliers will be evaluated
+question: How many suppliers you’ll shortlist
 question_advice: |
-  Try not to take too many suppliers through to the assessment stage.
-  
-  You must take the suppliers who have the most nice-to-have skills and experience through.
-  
-  If the number of suppliers who have the most skills and experience exceeds the number you give you here, 
-  you must ask for evidence of skills and experience.
+  This is how many suppliers you’ll shortlist to evaluate.
+
+  [Read about how to shortlist](https://www.gov.uk/guidance/how-to-shortlist-digital-outcomes-and-specialists-suppliers).
+
 hint: "Minimum 3"
 type: number
 limits:
