--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaParticipants.yml
@@ -1,17 +1,15 @@
 name: Technical competence criteria
 question: Technical competence criteria
 question_advice: |
-  You must assess a supplier’s technical competence by reviewing their:
+  Technical competence is how well the supplier can do the work you need them to do.
+
+  Evaluate suppliers’ technical competence using criteria for:
 
   - essential skills and experience
   - nice-to-have skills and experience
   - proposal
 
-  If you want to score individual criteria, you must add points for all:
-
-  - essential skills and experience 
-  - nice-to-have skills and experience
-  - proposal criteria
+  If you want to score criteria individually, you must add points for everything.
 
   The points you give for nice-to-have skills and experience must be lower than the points you give to the supplier’s essential skills and experience and proposal.
 
