--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsSpecialists.yml
@@ -4,7 +4,7 @@ question: 'Essential skills and experience'
 question_advice: |
   Suppliers who don’t have all the essential skills you list here will be automatically notified that their application was unsuccessful.
 
-  List all the specific skills or experience the specialist must have, 
+  List all the specific skills or experience the specialist must have,<br /> 
   eg have experience designing services for users with low digital literacy.
 
   **The specialist must:**
