--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/successCriteriaParticipants.yml
@@ -6,10 +6,9 @@ question_advice: |
   
   Suggested criteria
   
-  - The proposed approach and methodology
-  - How the approach or solution meets your organisation’s policy or goal
-  - How the approach or solution meets user needs
+  - Approach to recruiting specialist participants
   - Estimated timeframes for the work
+  - Breakdown of recruitment costs and incentives
   - How they’ve identified risks and dependencies and offered approaches to manage them
 
 type: list
