--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaSpecialists.yml
@@ -8,9 +8,10 @@ question_advice: |
   - essential skills and experience
   - nice-to-have skills and experience
 
-  If you want to score criteria individually, you must add points for everything.
+  **Giving points for individual criteria (optional)**<br />
+  You can give points to individual criteria, eg ‘have experience designing services for users with low digital literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
 
-  The points you give for nice-to-have skills and experience must be lower than the points you give to the supplier’s essential skills and experience and proposal.
+  The points you give for essential skills and experience and proposal criteria must be higher than the points for nice-to-have skills and experience criteria. Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
 
 optional: false
 type: multiquestion
