--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsSpecialists.yml
@@ -2,9 +2,10 @@ name: 'Nice-to-have skills and experience'
 id: niceToHaveRequirements
 question: 'Nice-to-have skills and experience'
 question_advice: |
-  If too many specialists have all the essential skills and experience, you’ll use the nice-to-have skills and experience to exclude specialists.
+  If too many specialists have all the essential skills and experience, use the nice-to-have skills and experience to exclude specialists.
 
-  List the skills and experience you’d like the specialist to have, eg provide evidence of delivering at scale.
+  List the skills and experience you’d like the specialist to have,<br />
+  eg provide evidence of delivering at scale.
 
   **The specialist can:**
 
