--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersParticipants.yml
@@ -1,12 +1,12 @@
-name: How many suppliers you’ll shortlist
+name: Maximum number of suppliers you’ll evaluate
 id: numberOfSuppliers
-question: How many suppliers you’ll shortlist
+question: Maximum number of suppliers you’ll evaluate
 question_advice: |
-  This is how many suppliers you’ll shortlist to evaluate.
+  You must evaluate at least 3 suppliers.
 
-  [Read about how to shortlist](https://www.gov.uk/guidance/how-to-shortlist-digital-outcomes-and-specialists-suppliers).
+   Read about [how many suppliers you should evaluate](https://www.gov.uk/guidance/how-to-shortlist-digital-outcomes-and-specialists-suppliers#how-many-suppliers-to-evaluate).
 
-hint: "Minimum 3"
+hint: 
 type: number
 limits:
   integer_only: true
@@ -21,6 +21,6 @@ validations:
   - name: answer_required
     message: 'You need to answer this question.'
   - name: not_a_number
-    message: 'Number of suppliers to evaluate must be between 3 and 15.'
+    message: 'You must evaluate at least 3, and no more than 15, suppliers.'
 
-empty_message: Set number of suppliers to evaluate
+empty_message: Set maximum number of suppliers you’ll evaluate
