--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/priceCriteria.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/priceCriteria.yml
@@ -1,5 +1,5 @@
-name: Price criteria
-question: Price criteria
+name: Payment approach
+question: Payment approach
 question_advice: You should choose the approach that best fits the way you work and provides the best value for money.
 type: radios
 options:
@@ -28,4 +28,9 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
-empty_message: Choose price criteria
+empty_message: Choose payment approach
+
+validations:
+  -
+    name: answer_required
+    message: 'You need to answer this question.'
