--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
@@ -9,7 +9,10 @@ question_advice: |
   - nice-to-have skills and experience
   - proposal
 
-  If you want to score criteria individually, you must add points for everything.
+  **Scoring (optional)**<br />
+
+
+  If you want to score individual criteria, you must add points for everything. Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
 
   The points you give for nice-to-have skills and experience must be lower than the points you give to the supplier’s essential skills and experience and proposal.
 
