--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -130,7 +130,7 @@
     There are 3 stages to finding the supplier that best meets your needs.
 
     **1\. View suppliers who applied**<br />
-    When suppliers apply, they declare which of your ‘essential’ and ‘nice&#8209;to&#8209;have’ skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
+    When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
 
     **2\. Create a shortlist**<br />
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
