--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -99,7 +99,7 @@
     There are 3 stages to finding the specialist that best meets your needs.
 
     **1\. View specialists who applied**<br />
-    When specialists apply, they declare which of your ‘essential’ and ‘nice&#8209;to&#8209;have’ skills and experience they have. Specialists who don’t meet your essential skills and experience are excluded.
+    When specialists apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Specialists who don’t meet your essential skills and experience are excluded.
 
     **2\. Create a shortlist**<br />
     Once you have a list of eligible specialists, you can exclude the specialists who:
@@ -135,7 +135,7 @@
     **2\. Create a shortlist**<br />
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
 
-    - have the least ‘nice&#8209;to&#8209;have’ skills and experience
+    - have the least nice&#8209;to&#8209;have skills and experience
     - can’t start when you need them to
 
     You may need to ask for evidence of skills and experience if you have too many suppliers.
