--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaParticipants.yml
@@ -9,10 +9,11 @@ question_advice: |
   - nice-to-have skills and experience
   - proposal
 
-  **Scoring (optional)**<br />
-  If you want to score individual criteria, you must add points for everything. Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
+  **Giving points for individual criteria (optional)**<br />
+ You can give points to individual criteria, eg ‘have experience recruiting participants with low digital literacy – 15 points’. 
 
-  The points you give for nice-to-have skills and experience must be lower than the points you give to the supplier’s essential skills and experience and proposal.
+ The points you give for nice-to-have skills and experience must be lower than the points you give to the supplier’s essential skills and experience. Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
+
 
 optional: false
 type: multiquestion
