Mark bold header text as h2s

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -63,10 +63,10 @@
   description: |
     There are 3 stages to finding the supplier that best meets your needs.
 
-    **1\. View suppliers who applied**<br />
+    ##1\. View suppliers who applied
     When suppliers apply, they declare which of your ‘essential’ and ‘nice&#8209;to&#8209;have’ skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
 
-    **2\. Create a shortlist**<br />
+    ##2\. Create a shortlist
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
 
     - have the least ‘nice&#8209;to&#8209;have’ skills and experience
@@ -75,7 +75,7 @@
     You may need to ask for evidence of skills and experience if you have too many suppliers.
 
 
-    **3\. Evaluate your shortlist**<br />
+    ##3\. Evaluate your shortlist
     Ask the shortlisted suppliers for: 
 
       - evidence of their skills and experience
@@ -98,10 +98,10 @@
   description: |
     There are 3 stages to finding the specialist that best meets your needs.
 
-    **1\. View specialists who applied**<br />
+    ##1\. View specialists who applied
     When specialists apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Specialists who don’t meet your essential skills and experience are excluded.
 
-    **2\. Create a shortlist**<br />
+    ##2\. Create a shortlist
     Once you have a list of eligible specialists, you can exclude the specialists who:
 
     - have the least ‘nice&#8209;to&#8209;have’ skills and experience
@@ -110,7 +110,7 @@
     You may need to ask for evidence of skills and experience if you have too many specialists.
 
 
-    **3\. Evaluate your shortlist**<br />
+    ##3\. Evaluate your shortlist
     Ask the shortlisted specialists for evidence of their skills and experience.
 
     You must tell specialists how you’ll evaluate and assess them.
@@ -129,10 +129,10 @@
   description: |
     There are 3 stages to finding the supplier that best meets your needs.
 
-    **1\. View suppliers who applied**<br />
+    ##1\. View suppliers who applied
     When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
 
-    **2\. Create a shortlist**<br />
+    ##2\. Create a shortlist
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
 
     - have the least nice&#8209;to&#8209;have skills and experience
@@ -141,7 +141,7 @@
     You may need to ask for evidence of skills and experience if you have too many suppliers.
 
 
-    **3\. Evaluate your shortlist**<br />
+    ##3\. Evaluate your shortlist
     Ask the shortlisted suppliers for: 
 
       - evidence of their skills and experience
