--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
@@ -9,7 +9,7 @@ question_advice: |
   - nice-to-have skills and experience
   - proposal
 
-  **Scoring (optional)**<br />
+  ##Scoring (optional)
 
 
   If you want to score individual criteria, you must add points for everything. Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
