Replace <br> tags in Markdown with double spaces
As explained in the section in the Markdown docs
on line returns:

http://markdown-guide.readthedocs.io/en/latest/basics.html#line-return

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsParticipants.yml
@@ -4,7 +4,7 @@ question: 'Essential skills and experience'
 question_advice: |
   Suppliers who don’t have all the essential skills you list here will be automatically notified that their application was unsuccessful.
 
-  List all the specific skills or experience the supplier must have,<br />
+  List all the specific skills or experience the supplier must have,  
   eg have experience recruiting participants with low digital literacy.
 
   **The supplier must:**
