--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsOutcomes.yml
@@ -4,7 +4,7 @@ question: 'Nice-to-have skills and experience'
 question_advice: |
   If too many suppliers have all the essential skills and experience, use the nice-to-have skills and experience to exclude suppliers.
 
-  List the skills and experience you’d like the supplier to have,<br />
+  List the skills and experience you’d like the supplier to have,  
   eg provide evidence of delivering at scale.
 
   **The supplier can:**
