Revert "Replace <br> tags in Markdown with double spaces"
This reverts commit 7145b55440cab8234f324a16b3a059ffc13695e8.

Turns out that specifying line breaks in markdown
is error-prone as many developers have text
editors that will remove all extraneous spaces at
the end of their lines so this method could easily
break. The risk of this overturns the need to
replace the `<br>` tags.

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsOutcomes.yml
@@ -4,7 +4,7 @@ question: 'Essential skills and experience'
 question_advice: |
   When suppliers apply they declare which of your essential skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
 
-  List all the specific skills or experience the supplier must have,  
+  List all the specific skills or experience the supplier must have,<br /> 
   eg have experience designing services for users with low digital literacy.
 
   **The supplier must:**
