--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeOutcomes.yml
@@ -2,20 +2,19 @@ name: Assessment methods
 id: evaluationType
 question: How you’ll assess suppliers
 question_advice: |
-  Choose how you want to assess suppliers.
-  
-  You can only use the methods you choose here.
-  
-  You must ask for a written proposal.
-  
+  All suppliers that reach the assessment stage will be asked to provide a written proposal.
+
+  Choose additional ways to assess suppliers.
+
+  You can only use the methods you choose here, eg if you don’t select a case study now, you won’t be able to ask for one later.
+
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
+
+before_summary_value:
+  - "Written proposal"
+
 options:
-  - label: "Written proposal"
-    description: >
-       A written proposal can help you understand how suppliers plan to address your business goal and user needs. 
-       It should be structured around the questions you want suppliers to answer. It’s normally the first evaluation 
-       method buyers use.
   - label: "Case study"
     description: >
        A case study is a good way to see the work suppliers have done before. It can help you understand whether the 
