--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeParticipants.yml
@@ -10,6 +10,7 @@ question_advice: |
 
   Read about [assessment methods](https://www.gov.uk/guidance/ways-to-assess-digital-outcomes-and-specialists-suppliers).
 type: checkboxes
+optional: true
 
 before_summary_value:
   - "Written proposal"
