Update 'you must ask' assessment question advice wording

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeOutcomes.yml
@@ -2,7 +2,7 @@ name: Assessment methods
 id: evaluationType
 question: How you’ll assess suppliers
 question_advice: |
-  All suppliers that reach the assessment stage will be asked to provide a written proposal.
+  You must ask all suppliers that reach the assessment stage for a written proposal.
 
   Choose additional ways to assess suppliers.
 
