--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/evaluationTypeSpecialists.yml
@@ -2,7 +2,7 @@ name: Assessment methods
 id: evaluationType
 question: How you’ll assess specialists
 question_advice: |
-  All specialists that reach the assessment stage will be asked to provide a work history.
+  You must ask all specialists that reach the assessment stage for a work history.
 
   Choose additional ways to assess specialists.
 
