--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -64,12 +64,12 @@
     There are 3 stages to finding the supplier that best meets your needs.
 
     ##1\. View suppliers who applied
-    When suppliers apply, they declare which of your ‘essential’ and ‘nice&#8209;to&#8209;have’ skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
+    When suppliers apply, they declare which of your essential and nice&#8209;to&#8209;have skills and experience they have. Suppliers who don’t meet your essential skills and experience are excluded.
 
     ##2\. Create a shortlist
     Once you have a list of eligible suppliers, you can exclude the suppliers who:
 
-    - have the least ‘nice&#8209;to&#8209;have’ skills and experience
+    - have the least nice&#8209;to&#8209;have skills and experience
     - can’t start when you need them to
 
     You may need to ask for evidence of skills and experience if you have too many suppliers.
@@ -104,7 +104,7 @@
     ##2\. Create a shortlist
     Once you have a list of eligible specialists, you can exclude the specialists who:
 
-    - have the least ‘nice&#8209;to&#8209;have’ skills and experience
+    - have the least nice&#8209;to&#8209;have skills and experience
     - can’t start when you need them to
 
     You may need to ask for evidence of skills and experience if you have too many specialists.
