--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -92,7 +92,7 @@
     - evaluationTypeOutcomes
 
 -
-  name: Shortlist and evaluation criteria
+  name: Shortlist and evaluation process
   editable: True
   step: 2
   description: |
@@ -123,7 +123,7 @@
     - evaluationTypeSpecialists
 
 -
-  name: Shortlist and evaluation criteria
+  name: Shortlist and evaluation process
   editable: True
   step: 2
   description: |
