--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/technicalCompetenceCriteriaOutcomes.yml
@@ -14,7 +14,7 @@ question_advice: |
   You can give points to individual criteria, eg ‘have experience designing services for users with low digital
   literacy – 15 points’. If you choose to add points, you must do it for all individual criteria.
   
-  The points you give for nice-to-have skills and experience criteria must be lower than the points you give for 
+  The points you give for nice-to-have skills and experience must be lower than the points you give for 
   essential skills and experience and proposal criteria.
   Read [how to score individual criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria).
 
