Alter maximum number to evaluate question
This is shown on the public view of an opportunity, where the previous wording ("how many you''ll evaluate") didn't make sense.  This way it works both as a question for the buyer when writing their requirements and for the suppliers viewing the opportunity.

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/numberOfSuppliersOutcomes.yml
@@ -1,4 +1,4 @@
-name: Maximum number of suppliers you’ll evaluate
+name: Maximum number of suppliers that will be evaluated
 id: numberOfSuppliers
 question: Maximum number of suppliers you’ll evaluate
 question_advice: |
