--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/budgetRangeSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/budgetRangeSpecialists.yml
@@ -6,6 +6,8 @@ question_advice: |
 
   You must have budget approval before you publish your requirements.
 
+  If you don't provide a day rate, you won't be able to exclude specialists that exceed your budget.
+
   Suppliers will provide you with a day rate for the specialist.
 optional: true
 type: textbox_large
