Fix G-Cloud message.

--- a/frameworks/g-cloud-8/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-8/messages/homepage-sidebar.yml
@@ -11,7 +11,7 @@ pending:
     - 'G‑Cloud 8 services will be available from 1 August 2016.'
 
 open:
-  heading: 'G-Cloud 8 open for applications'
+  heading: 'G-Cloud 8 is open for applications'
   messages:
     - 'Provide cloud software and support to the public sector.'
     - 'You need an account to apply.'
