--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/opportunityLengthSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/opportunityLengthSpecialists.yml
@@ -1,6 +1,6 @@
 name: Set how long your requirements will be live for
 question: Set how long your requirements will be live for
-id: requirements length
+id: requirementsLength
 type: radios
 options:
   - label: "1 week"
