Update content to refer to working days

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/questionAndAnswerSessionDetailsSpecialists.yml
@@ -10,9 +10,9 @@ question_advice: |
 
   **When to run a question and answer session**
 
-  lf your requirements are live for 1 week, you must hold your session within the first 2 days of publishing.
+  lf your requirements are live for 1 week, you must hold your session within the first 2 working days of publishing.
 
-  If your requirements are live for 2 weeks, you must hold your session within the first 7 days of publishing.
+  If your requirements are live for 2 weeks, you must hold your session within the first 5 working days of publishing.
 
   **Information you should include**
 
