--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief_response.yml
@@ -1,8 +1,9 @@
 -
   name: Apply for this opportunity
   editable: True
-  description: |
-    Buyers will use the information suppliers provide here to create a shortlist.
+  description:
+    default: Buyers will use the information suppliers provide here to create a shortlist.
+    digital-specialists: You can only offer 1 specialist for this opportunity. Buyers will use the information suppliers provide here to create a shortlist.
   questions:
     - respondToEmailAddress
     - essentialRequirements
