--- a/schemas/manifests.json
+++ b/schemas/manifests.json
@@ -24,7 +24,26 @@
         }
       },
       "description": {
-        "type": "string"
+        "oneOf": [
+          {
+            "type": "string"
+          },
+          {
+            "type": "object",
+            "properties": {
+              "saas": {"type": "string"},
+              "paas": {"type": "string"},
+              "iaas": {"type": "string"},
+              "scs": {"type": "string"},
+              "digital-outcomes": {"type": "string"},
+              "digital-specialists": {"type": "string"},
+              "user-research-participants": {"type": "string"},
+              "user-research-studios": {"type": "string"},
+              "default": {"type": "string"}
+            },
+            "additionalProperties": false
+          }
+        ]
       },
       "step": {
         "type": "integer"
