--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/priceCriteria.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/priceCriteria.yml
@@ -6,23 +6,23 @@ options:
   -
     label: Fixed price
     description: >
-      Choosing a fixed price approach means that the supplier owns most of the risk. They’re contractually bound 
-      to provide all the work you specify in each particular ‘statement of work’ within the stated timeframe. 
-      The supplier may charge more for owning more of the risk. A fixed price approach works best when the requirement
-       is well defined so the supplier can provide an accurate quote without incorporating extra costs.
+      A fixed price approach can be more expensive because the supplier owns most of the risk. It works best when your
+      requirements are well defined so the supplier can provide an accurate quote without incorporating extra costs.
+      The supplier must do all the work you specify in each particular ‘statement of work’ within the time you agreed
+      it would take.
   -
     label: Time and materials
     description: >
-      A time and materials approach means you own more of the risk. The supplier can send a pricing matrix showing 
-      how long they need to provide the work. If it takes longer to do the work defined in a statement of work, you 
-      will be charged on a day rate and expenses basis.
+      A time and materials approach means you own more of the risk. The supplier can send a pricing matrix showing
+      how long they need to provide the work. If it takes longer to do the work defined in a statement of work, you
+      pay the day rate and expenses for any extra days worked.
   -
     label: Capped time and materials
     description: >
       A capped time and materials approach is the same as a time and materials approach but there’s a limit on how
       much you have to pay for the work. If you reach the limit before the work is finished, the supplier has to
       complete the work at their own cost. If the supplier finishes the work before they said they would, you only
-      pay them for time they took to do the work.
+      pay them for the time they took to do the work.
 
 depends:
   - "on": "lot"
