--- a/frameworks/digital-service-professionals/questions/briefs/titleSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/titleSpecialists.yml
@@ -1,10 +1,10 @@
 id: title
 name: Title
-question: What you want to call your requirements
+question: How would you summarise your needs?
 question_advice: |
-  This will help you refer to your requirements when talking to suppliers.
-
-  You can only post requirements for 1 specialist role at a time, eg if you want to find 3 developers, you must post 3 separate requirements – 1 for each developer.
+  For example 'Developer needed for immediate start'. Or simply, 'Ethical Hacker—6 month project'.
+  
+  This is the headline of your brief. You can update it later if needed.
 
 hint: 100 characters maximum
 type: text
@@ -15,8 +15,8 @@ depends:
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
+    message: 'Please answer this question to continue.'
   -
     name: under_character_limit
-    message: "Your title must be no more than 100 characters."
-empty_message: Add title
+    message: "Your summary needs to be 100 characters or less."
+empty_message: Add summary
