--- a/frameworks/digital-service-professionals/questions/briefs/locationOutcomes.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationOutcomes.yml
@@ -1,7 +1,7 @@
 name: Region
 question: Where will the work take place?
 id: location
-question_advice: This can be more than one location. If the specialist can work from any location choose 'Can work remotely'.
+question_advice: This can be more than one location. If the specialist can work anywhere, choose 'Can work remotely'.
 
 type: radios
 options:
