--- a/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/locationSpecialists.yml
@@ -1,27 +1,19 @@
 name: Region
-question: Where you want the specialist to work
+question: Where will the work take place?
 id: location
-question_advice: |
-  This should be the primary location where they’ll be working.
-
-  Suppliers have said where they’ll provide specialists.
-
-  [View region map (PDF, 262KB)](https://geoportal.statistics.gov.uk/Docs/Maps/Regions_(Eng)_2011_map.pdf)
+question_advice: 
+  This can be more than one location. If the specialist can work anywhere, choose 'Can work remotely'.
 type: radios
 options:
-  - label: "Scotland"
-  - label: "North East England"
-  - label: "North West England"
-  - label: "Yorkshire and the Humber"
-  - label: "East Midlands"
-  - label: "West Midlands"
-  - label: "East of England"
-  - label: "Wales"
-  - label: "London"
-  - label: "South East England"
-  - label: "South West England"
-  - label: "Northern Ireland"
-  - label: "No specific region, eg they can work remotely"
+  - label: "ACT"
+  - label: "New South Wales"
+  - label: "Northern Territory"
+  - label: "Queensland"
+  - label: "South Australia"
+  - label: "Tasmania"
+  - label: "Victoria"
+  - label: "Western Australia"
+  - label: "Can work remotely"
     value: "Offsite"
 depends:
   - "on": "lot"
@@ -30,5 +22,4 @@ depends:
 validations:
   -
     name: answer_required
-    message: 'You need to answer this question.'
-empty_message: Choose location
+    message: 'Please select at least one location to continue.'
