--- a/frameworks/digital-service-professionals/questions/briefs/titleSpecialists.yml
+++ b/frameworks/digital-service-professionals/questions/briefs/titleSpecialists.yml
@@ -1,6 +1,6 @@
 id: title
-name: Title
-question: How would you summarise your needs?
+name: 
+question: Tell us what you need
 question_advice: |
   For example 'Developer needed for immediate start'. Or simply, 'Ethical Hacker—6 month project'.
   
